# flvparse

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  rustfmt.toml
.github/workflows/: build.yml  rust.yml
assets/: test_flv_script_tag_data.txt
ci/: before_deploy.ps1  before_deploy.sh  script.sh
cmd/: Cargo.toml
cmd/src/: main.rs
examples/: flvparser.rs
src/: error.rs  flv_parser.rs  lib.rs  main.rs  parser.rs
src/parse/: audio.rs  mod.rs  script.rs  video.rs
tests/: parse.rs
