[package]
name = "flvparse"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"
description = "A FLV format parsing library written in Rust"
homepage = "https://github.com/koushiro/flvparse"
repository = "https://github.com/koushiro/flvparse"
keywords = ["flv", "parse", "nom"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md", ".gitignore"]

[lib]
name = "flvparse"
path = "src/lib.rs"

[features]
default = ["std"]
alloc = ["nom/alloc"]
std = ["nom/std"]

[dependencies]
nom = { version = "6.0.0", default-features = false }
