[package]
name = "flvparse"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/flvparse"
repository = "https://github.com/koushiro/flvparse"
description = "A FLV format parsing library written in Rust"
keywords = ["flv", "parse", "nom"]
exclude = [
  ".github",
  "assets",
  "cmd",
  "tests"
]

[lib]
name = "flvparse"
path = "src/lib.rs"

[features]
default = ["std"]
alloc = ["nom/alloc"]
std = ["nom/std"]

[dependencies]
nom = { version = "6.1", default-features = false }
